# repropack

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: commands.md  index.md  plugins.md  tutorial.md
examples/: README.md
examples/julia-sim/: Manifest.toml  Project.toml  README.md  run.jl
examples/python-ml/: README.md  prepare.py  train.py
examples/r-analysis/: README.md  analysis.R
src/repropack/: __init__.py  cli.py
src/repropack/core/: __init__.py  apptainer_generator.py  capture.py  data.py  diff.py  docker_generator.py  doctor.py  gitinfo.py  inspect.py  manifest.py  migrate.py  plugins.py  provenance.py  publish.py  run.py  secrets.py  sign.py  validate.py
src/repropack/utils/: __init__.py  environment.py
tests/: __init__.py  test_apptainer.py  test_block_1_6.py  test_block_7_12.py  test_capture.py  test_cli.py  test_coverage_extra.py  test_data.py  test_e2e.py  test_environment.py  test_examples.py  test_inspect.py  test_internals.py  test_languages.py  test_multilang.py  test_new_features.py  test_phase3_tools.py  test_plugins.py  test_properties.py  test_provenance.py  test_publish.py  test_run.py  test_sign.py  test_validate.py
tests/fixtures/conda_r_bio/: conda-lock.yml  environment.yml  process.py  run_analysis.R  run_pipeline.sh
tests/fixtures/jupyter_ml/: README.md  analysis.ipynb
tests/fixtures/physics_simulation/: Makefile  README.md  run_simulation.py  setup.py  simulation.c
