[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repropack"
version = "0.1.1"
description = "Open-source CLI tool to create reproducible research packages (.rpk) with frozen environments, W3C PROV provenance, and Docker automation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ReproPack Team"},
]
keywords = ["reproducibility", "research", "provenance", "docker", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "graphviz>=0.20",
    "prov>=2.0.0",
    "docker>=7.0.0",
    "rich>=13.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "mypy>=1.6.0",
]

[project.scripts]
repropack = "repropack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repropack"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["D100", "D104", "B008"]  # Missing docstrings in __init__ modules; B008 for Typer defaults

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/repropack --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = ["repropack.cli"]
disable_error_code = ["misc"]
[[tool.mypy.overrides]]
module = ["networkx.*", "prov.*", "yaml.*", "graphviz.*"]
ignore_missing_imports = true
